tests/NormalTests/paczka1/small_fuzzy/75439294.err
Error in line 1: nUKWQwNHwXO S518 13,8
Error in line 4: uMB44Fg4b S554 30,7
Error in line 8: uMB44Fg4b S621 41,5
Error in line 5: SqZHG7w A606 62,3
